[package]
name = "phantom-clipper"
version = "1.0.0"
edition = "2021"

[dependencies]
tray-item = "0.10"
winapi = { version = "0.3", features = ["winuser", "wincon", "processthreadsapi"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2"

[profile.release]
opt-level = 3
lto = true
